--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://feitumtum.github.io/CHBE469_UMD_ChemE_Python",
+  "homepage": "https://Feitumtum.github.io/UMD-ChemE-Python",
   "name": "cheme-469-website-1",
   "version": "0.1.0",
   "private": true,
